<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8eaf2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        style="@style/textoI"
        android:text="@string/iniciar_sesion" />

    <EditText
        android:id="@+id/editText1"
        style="@style/texto.loginText"
        android:layout_below="@+id/textView1"
        
       android:hint="@string/ingreseUser"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        style="@style/estiloBoton"
        android:layout_below="@+id/editText1"
        android:onClick="ingresar"
        android:text="@string/btn_ingresar" />

    <Button
        android:id="@+id/button2"
        style="@style/estiloBoton"
        android:layout_below="@+id/button1"
        android:onClick="registrarse"
        android:text="@string/Registrarse" />
     

</RelativeLayout>