<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8eaf2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main_Registro" >

    <TextView
        android:id="@+id/textView1"
        style="@style/textoI"
        android:text="@string/Registrarse" />

    <EditText
        android:id="@+id/editText1"
        style="@style/texto.loginText"
        android:layout_below="@+id/textView1"     
       android:hint="@string/Nombre"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/editText2"
        style="@style/texto.loginText"
        android:layout_below="@+id/editText1"
       
       android:hint="@string/email"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        style="@style/estiloBoton"
        android:onClick="reportar"
        android:layout_below="@+id/editText2"
        android:text="@string/registrar" />

</RelativeLayout>
